# worldchat

./: .envrc  Cargo.toml  README.md  index.html
src/: app.rs  chat.rs  irc.rs  lib.rs  main.rs  tokio.rs  world.rs
src/chat/: join.rs  member.rs  message.rs  room.rs  user.rs
src/irc/: channel.rs  message.rs  server.rs  user.rs
src/world/: user.rs
tests/: pkarr_publish_test.rs
