[package]
name = "worldchat"
version = "0.1.0"
authors = ["Andrew Wason <rectalogic@rectalogic.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-channel = "2.5.0"
bevy = { version = "0.18.1", default-features = false, features = ["2d", "web", "webgl2"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.64"
irc-proto = { version = "1.1.0", default-features = false }
tokio-tungstenite-wasm = "0.8.2"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
